Fix pmd violations